fix jumpy bug in nav

--- a/app/styles/reen/main.css
+++ b/app/styles/reen/main.css
@@ -48,7 +48,7 @@ iframe {
 }
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    background-color: #0a4534;
+    background-color: #fff;
     color: #999999;
     font-size: 18px;
 	line-height: 150%;
@@ -1336,10 +1336,9 @@ aside .thumb figure {
 	display: none;
 }
 .navbar-header {
-    float: none !important;
+    display: none !important;
 	position: relative;
 	background: #F5F7FA;
-	border-bottom: 1px solid #E6E9ED;
 	z-index: 0;
 }
 .navbar-header li,
